2006-07-31 [wwp]	2.4.0cvs3

	* src/Makefile.am
	* src/addr_compl.c
	* src/addr_compl.h
	* src/addressbook.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressbook_foldersel.h
	* src/addrindex.c
	* src/addrindex.h
	* src/matcher.c
	* src/matcher.h
	* src/matcher_parser_lex.l
	* src/matcher_parser_parse.y
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_filtering.c
	* src/prefs_matcher.c
	* src/prefs_matcher.h
	* src/summaryview.c
		introduce filtering against the address book. It's now possible to add
		matched conditions to determine if any email address in a message matches
		or doesn't match any or all books or folders in the address book.

2006-07-31 [wwp]	2.4.0cvs2

	* src/account.c
	* src/filtering.c
	* src/filtering.h
	* src/folder.c
	* src/folderview.c
	* src/inc.c
	* src/mainwindow.c
	* src/matcher.c
	* src/matcher_parser_lex.l
	* src/matcher_parser_parse.y
	* src/mbox.c
	* src/prefs_filtering.c
	* src/prefs_filtering.h
	* src/procmsg.c
	* src/procmsg.h
	* src/summaryview.c
		introduce per-account filtering rules. Each filtering rule can now be assigned
		to a specific account (by default it's "All"), works w/ POP3/IMAP. Take care
		when applying filtering rules manually, as all rules will apply - even the ones
		assigned to an account. This issue will be addressed soon.
 


2006-07-31 [wwp]	2.4.0cvs1

	* src/quote_fmt.c
		make more strings translatable.

2006-07-31 [paul]	2.4.0

	2.4.0 released

2006-07-31 [paul]	2.3.1cvs91

	* po/ca.po
		updated by Miquel Oliete

2006-07-31 [paul]	2.3.1cvs90

	* po/de.po
	* po/el.po
	* po/fr.po
	* po/it.po
	* po/pl.po
	* po/pt_BR.po
	* po/sr.po
	* po/zh_CN.po
		updated by Stephan Sachse, Stavros Giannouris, Fabien Vantard,
		Andrea Spadaccini, Emil Nowak, Frederico Goncalves Guimaraes,
		Aleksandar Urosevic, and Ralgh Young

2006-07-31 [paul]	2.3.1cvs89

	* src/account.c
	* src/main.c
	* src/mainwindow.c
	* src/mainwindow.h
		Fix a race condition when, after an SC crash, rescanning