@@ -1695,3 +1695,4 @@
 ( cvs diff -u -r 1.8.2.8 -r 1.8.2.9 src/quote_fmt.c;  ) > 2.4.0cvs1.patchset
 ( cvs diff -u -r 1.61.2.48 -r 1.61.2.49 src/account.c;  cvs diff -u -r 1.60.2.19 -r 1.60.2.20 src/filtering.c;  cvs diff -u -r 1.21.2.7 -r 1.21.2.8 src/filtering.h;  cvs diff -u -r 1.213.2.105 -r 1.213.2.106 src/folder.c;  cvs diff -u -r 1.207.2.110 -r 1.207.2.111 src/folderview.c;  cvs diff -u -r 1.149.2.54 -r 1.149.2.55 src/inc.c;  cvs diff -u -r 1.274.2.127 -r 1.274.2.128 src/mainwindow.c;  cvs diff -u -r 1.75.2.26 -r 1.75.2.27 src/matcher.c;  cvs diff -u -r 1.16.2.6 -r 1.16.2.7 src/matcher_parser_lex.l;  cvs diff -u -r 1.25.2.14 -r 1.25.2.15 src/matcher_parser_parse.y;  cvs diff -u -r 1.28.2.22 -r 1.28.2.23 src/mbox.c;  cvs diff -u -r 1.59.2.36 -r 1.59.2.37 src/prefs_filtering.c;  cvs diff -u -r 1.6.2.4 -r 1.6.2.5 src/prefs_filtering.h;  cvs diff -u -r 1.150.2.69 -r 1.150.2.70 src/procmsg.c;  cvs diff -u -r 1.60.2.29 -r 1.60.2.30 src/procmsg.h;  cvs diff -u -r 1.395.2.223 -r 1.395.2.224 src/summaryview.c;  ) > 2.4.0cvs2.patchset
 ( cvs diff -u -r 1.155.2.39 -r 1.155.2.40 src/Makefile.am;  cvs diff -u -r 1.27.2.18 -r 1.27.2.19 src/addr_compl.c;  cvs diff -u -r 1.8.2.4 -r 1.8.2.5 src/addr_compl.h;  cvs diff -u -r 1.60.2.59 -r 1.60.2.60 src/addressbook.c;  cvs diff -u -r 1.18.2.2 -r 1.18.2.3 src/addressbook.h;  diff -u /dev/null src/addressbook_foldersel.c;  diff -u /dev/null src/addressbook_foldersel.h;  cvs diff -u -r 1.28.2.17 -r 1.28.2.18 src/addrindex.c;  cvs diff -u -r 1.9.2.6 -r 1.9.2.7 src/addrindex.h;  cvs diff -u -r 1.75.2.27 -r 1.75.2.28 src/matcher.c;  cvs diff -u -r 1.39.2.7 -r 1.39.2.8 src/matcher.h;  cvs diff -u -r 1.16.2.7 -r 1.16.2.8 src/matcher_parser_lex.l;  cvs diff -u -r 1.25.2.15 -r 1.25.2.16 src/matcher_parser_parse.y;  cvs diff -u -r 1.204.2.92 -r 1.204.2.93 src/prefs_common.c;  cvs diff -u -r 1.103.2.54 -r 1.103.2.55 src/prefs_common.h;  cvs diff -u -r 1.59.2.37 -r 1.59.2.38 src/prefs_filtering.c;  cvs diff -u -r 1.43.2.40 -r 1.43.2.41 src/prefs_matcher.c;  cvs diff -u -r 1.4.2.3 -r 1.4.2.4 src/prefs_matcher.h;  cvs diff -u -r 1.395.2.224 -r 1.395.2.225 src/summaryview.c;  ) > 2.4.0cvs3.patchset
+( cvs diff -u -r 1.274.2.128 -r 1.274.2.129 src/mainwindow.c;  cvs diff -u -r 1.395.2.225 -r 1.395.2.226 src/summaryview.c;  cvs diff -u -r 1.68.2.24 -r 1.68.2.25 src/summaryview.h;  ) > 2.4.0cvs4.patchset
