@@ -1,3 +1,11 @@
+2006-07-31 [wwp]	2.4.0cvs4
+
+	* src/mainwindow.c
+	* src/summaryview.c
+	* src/summaryview.h
+		add "View/Go to/Parent message" and "View/Go to/Last read message",
+		thanks to Colin.
+
 2006-07-31 [wwp]	2.4.0cvs3
 
 	* src/Makefile.am
